--- a/docs-web/src/main/webapp/src/locale/zh_CN.json
+++ b/docs-web/src/main/webapp/src/locale/zh_CN.json
@@ -232,6 +232,22 @@
     "default": {
       "title": "用户 & 群组",
       "message": "此处您可以浏览用户和群组信息."
+    },
+    "register_request": "注册新账户",
+    "register": {
+      "username": "用户名",
+      "email": "电子邮箱",
+      "password": "密码",
+      "message": "附加信息",
+      "submit": "提交注册",
+      "success": "注册申请已成功提交",
+      "error": "注册失败",
+      "validation": {
+        "username_required": "请输入用户名",
+        "email_required": "请输入电子邮箱",
+        "password_required": "请输入密码",
+        "password_length": "密码长度至少为8个字符"
+      }
     }
   },
   "settings": {
