--- a/docs-web/src/main/webapp/src/locale/zh_CN.json
+++ b/docs-web/src/main/webapp/src/locale/zh_CN.json
@@ -248,6 +248,21 @@
         "password_required": "请输入密码",
         "password_length": "密码长度至少为8个字符"
       }
+    },
+    "pending_requests": "注册申请",
+    "no_pending_requests": "暂无待处理的注册申请",
+    "request": {
+      "username": "用户名",
+      "email": "电子邮箱",
+      "status": "状态",
+      "actions": "操作",
+      "message": "消息",
+      "date": "申请日期",
+      "no_message": "无消息",
+      "accept_success": "用户申请已成功接受",
+      "accept_error": "接受用户申请时出错",
+      "reject_success": "用户申请已成功拒绝",
+      "reject_error": "拒绝用户申请时出错"
     }
   },
   "settings": {
